# ncbs-neural-circuits-navigation

./: .gitignore  CLAUDE.md  README.md  main.py  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: binder.yml
notebooks/: 01-loading-nwb-data.ipynb  01-navigation-circuits.ipynb  02-spike-stimulus-analysis.ipynb  02a-spike-stimulus-analysis.ipynb  02b-poisson-regression.ipynb  02c-model-evaluation.ipynb  03-spectral-lfp.ipynb  03a-spectral-lfp.ipynb  03b-filtering-coherence.ipynb  03c-spike-field-coupling.ipynb  04-decoding.ipynb  04a-decoding.ipynb  04b-clusterless-decoding.ipynb  05-clusterless-decoding.ipynb
notebooks/scripts/: 01-loading-nwb-data.py  02a-spike-stimulus-analysis.py  02b-poisson-regression.py  02c-model-evaluation.py  03-spectral-lfp.py  03a-spectral-lfp.py  03b-filtering-coherence.py  03c-spike-field-coupling.py  04-decoding.py  04a-decoding.py  04b-clusterless-decoding.py  05-clusterless-decoding.py
slides/: future_slide_improvements.md
