[project]
name = "ncbs-neural-circuits-navigation"
version = "0.1.0"
description = "Course materials for Neural Circuits for Navigation: Anatomy, Physiology, and Computational Methods"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Eric Denovellis" },
    { name = "Abhilasha Joshi" },
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "jupyterlab",
    "pynwb",
    "hdmf",
    "jupyter-book>=2.1.2",
    "dandi>=0.74.2",
    "fsspec>=2026.1.0",
    "requests>=2.32.5",
    "aiohttp>=3.13.3",
    "remfile>=0.1.13",
    "h5py>=3.14.0",
    "spectral-connectivity>=2.0.0",
    "statsmodels>=0.14.0",
    "patsy>=0.5.0",
    "xarray>=2024.1.0",
    "jupytext>=1.16.0",
    "time-rescale>=0.2.2",
]

[dependency-groups]
dev = [
    "pypdf>=6.7.3",
]
